@@ -1,0 +1,9 @@
+module Lobbyist
+  class AdminPerformanceEvent < Lobbyist::Base
+    
+    # def self.list(params = {})
+    #   create_collection_from_response(get('/v1/customer_calls.json', params))
+    # end
+    
+  end
+end
