@@ -1,8 +1,6 @@
 module Lobbyist
   class MemberCall < Lobbyist::Base
     
-    attr_accessor :id, :company_id, :admin_user_id, :call_number, :completed_at, :status, :notes, :created_at, :updated_at
-    
     def self.list(admin_user_id, params = {})
       params['admin_user_id'] = admin_user_id
       create_from_response(get('/v1/member_calls.json', params))
