@@ -1,8 +1,6 @@
 module Lobbyist
   class TerminationNotice < Lobbyist::Base
     
-    attr_accessor :id, :company_id, :dismissed, :created_at, :updated_at
-    
     def company
       @company
     end
